force-app/main/default/objects/Bingo_Event__mdt/Bingo_Event__mdt.object-meta.xml
<CustomObject>
    <description>Per-event branding and copy for Networking Bingo. Lets the same app be reused for another conference, meetup or user group by editing a record instead of redeploying code.</description>
    <label>Bingo Event</label>
    <pluralLabel>Bingo Events</pluralLabel>
</CustomObject>