force-app/main/default/objects/Bingo_Event__mdt/fields/Event_Meta__c.field-meta.xml
<CustomField>
    <fullName>Event_Meta__c</fullName>
    <label>Event Meta Line</label>
    <length>160</length>
    <type>Text</type>
</CustomField>