force-app/main/default/objects/Bingo_Event__mdt/fields/Game_Title__c.field-meta.xml
<CustomField>
    <fullName>Game_Title__c</fullName>
    <label>Game Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>