force-app/main/default/objects/Bingo_Event__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exactly one record should be active. The app reads the active one at runtime.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>