force-app/main/default/objects/Bingo_Event__mdt/fields/Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Logo_Url__c</fullName>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>