force-app/main/default/objects/Bingo_Event__mdt/fields/Privacy_Notice__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Notice__c</fullName>
    <label>Privacy Notice</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>