force-app/main/default/objects/Bingo_Event__mdt/fields/Session_Details__c.field-meta.xml
<CustomField>
    <fullName>Session_Details__c</fullName>
    <label>Session Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>