force-app/main/default/objects/Bingo_Event__mdt/fields/Session_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_Name__c</fullName>
    <label>Session Name</label>
    <length>160</length>
    <type>Text</type>
</CustomField>