force-app/main/default/objects/Bingo_Event__mdt/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName>
    <label>Tagline</label>
    <length>200</length>
    <type>Text</type>
</CustomField>