force-app/main/default/objects/Bingo_Event__mdt/fields/Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Message__c</fullName>
    <label>Welcome Message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>